[tool.poetry]
name = "repl_python3_CS1410ComputerProgramming-7"
version = "0.1.0"
description = ""
authors = ["Wesley Campbell repl.it/@wesleyCampbell"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
